# filemerger

./: .gitignore  .gitlab-ci.yml  README.md  pyproject.toml
.gitlab/ci/: github-mirror.yml  pypi-release.yml
filemerger/: CHANGELOG.md  cli.py  core.py  filters.py  format_ai.py  format_default.py
