[project]
name = "filemerger-cli"
version = "0.3.1"
description = "Developer CLI tool to consolidate project files into a single output"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }

authors = [
    { name = "BinaryFleet" }
]

keywords = ["cli", "developer-tools", "file-merger", "llm", "code-review"]

dependencies = [
    "pathspec>=0.11"
]

[project.urls]
Homepage = "https://github.com/binaryfleet/filemerger"
Repository = "https://github.com/binaryfleet/filemerger"
Issues = "https://github.com/binaryfleet/filemerger/issues"

[project.scripts]
filemerger = "filemerger.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
